src/main/java/org/example/lexer/error/StringMaxSizeExceeded.java
package org.example.lexer.error;

public class StringMaxSizeExceeded extends Exception {
    public StringMaxSizeExceeded(String msg) {super(msg);}
}
